<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewsDetails"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:theme="@style/theme"
    >


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/headline_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsImage"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/headline"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headline_TV"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_TV"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/read_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_TV"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/btn"
                android:text="@string/read_more"
                android:textAllCaps="false"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
