<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.DashBoardActivity"
    style="@style/theme"
    android:gravity="center"
    android:background="@color/gray"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_450sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/AllNewsCV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"

                app:cardCornerRadius="18dp"
                android:clickable="true"
                app:cardElevation="@dimen/_8sdp"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/newsImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:src="@drawable/news"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/all_news"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/BusinessCV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="18dp"
                android:clickable="true"
                app:cardElevation="@dimen/_8sdp"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/businessImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:src="@drawable/business_news" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/business"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp">


            <androidx.cardview.widget.CardView
                android:id="@+id/healthCV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"

                app:cardCornerRadius="18dp"
                android:clickable="true"
                app:cardElevation="@dimen/_15sdp"
                tools:ignore="NestedWeights">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    >

                    <ImageView
                        android:id="@+id/healthImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/health" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/health"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sportCV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="18dp"
                android:clickable="true"
                app:cardElevation="@dimen/_8sdp"
                tools:ignore="NestedWeights"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    >

                    <ImageView
                        android:id="@+id/sportImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:src="@drawable/sport_news"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/sport"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:elevation="@dimen/_10sdp">

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:elevation="@dimen/_5sdp"
            android:text="@string/select_news_language"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/arabicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:buttonTint="#6E640F"
                android:text="@string/arabic"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"   />

            <RadioButton
                android:id="@+id/englishBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:buttonTint="#6E640F"
                android:text="@string/english"
                android:textStyle=""
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/frenchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:buttonTint="#6E640F"
                android:text="@string/french"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>